# toydl

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build_docs.yml  publish.yml  test.yml
api/dep_graph/: index.html
api/module/: index.html
api/operator/: index.html
api/optim/: index.html
api/scalar/: index.html
changelog/: index.html
docs/: CHANGELOG.md  index.md  quickstart.md
docs/api/: context.md  dep_graph.md  module.md  operator.md  optim.md  scalar.md
docs/js/: run_code_main.js
docs/plugins/: main.py  using_update.py
docs/quickstart/: install.md  mlp.md
docs/theme/: mkdocs_run_deps.html
example/: mlp_binary.py
playground/: backword.py  simple.ipynb
quickstart/install/: index.html
quickstart/mlp/: index.html
scripts/lint/: run-flake8.sh
search/: search_index.json
tests/core/: strategies.py  test_operator.py
tests/torch/: test_operator.py
toydl/: __init__.py
toydl/core/: __init__.py  autodiff.py  context.py  module.py  operator.py  optim.py  scalar.py  variable.py
toydl/core/optim/: __init__.py  _momentum.py  _sgd.py
toydl/core/scalar/: __init__.py  bp.py  context.py  function.py  history.py  scalar.py
toydl/dataset/: base.py  data.py  exception.py  simple.py  simulation.py
toydl/example/: mlp_binary.py  scalar_nn.py
toydl/layer/: linear.py
toydl/loss/: base.py  cross_entropy.py
toydl/network/: mlp.py
toydl/torch/: operator.py
toydl/util/: functions.py  testing.py
