[project]
name = "toydl"
version = "0.3.0"
description = "ToyDL: Deep Learning from Scratch"
authors = [{ name = "Xiangzhuang Shen", email = "datahonor@gmail.com" }]
requires-python = ">=3.12, <4.0"
readme = "README.md"
license = "MIT"
keywords = ["machine learning", "statistics", "engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["matplotlib>=3.8.2,<4"]

[project.optional-dependencies]
dev = [
    "marimo>=0.14.13",
    "tqdm>=4.0.0,<5",
    "ipython>=8.7.0,<9",
    "pre-commit>=3.5.0,<4",
    "pydeps>=1.12.17,<2",
    "mypy>=0.981,<0.982",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]
test = [
    "pytest>=7.1.3,<8",
    "pytest-cov>=4.0.0,<5",
    "hypothesis>=6.61.0,<7",
    "pytest-sugar>=0.9.7,<0.10",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocs-bibtex",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.urls]
Homepage = "https://shenxiangzhuang.github.io/toydl"
Repository = "https://github.com/shenxiangzhuang/toydl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
# TODO: change cov percent to 90
addopts = "-v --cov=toydl --cov-fail-under 0 --cov-report=term --cov-report=xml --cov-report=html"
testpaths = ["tests"]
# Note that everything past the : after the mark name is an optional description.
markers = ["operator: operator related tests"]

[tool.coverage.run]
omit = ["*/__init__.py", "toydl/util/testing.py"]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'def __repr__',
]
fail_under = 90
precision = 1
skip_empty = true
sort = "-Cover"

[tool.pydeps]
max_bacon = 4
exclude = ["matplotlib"]
verbose = 0
pylib = false
show_deps = true


# For zed editor
[tool.pyright]
include = ["toydl"]
ignore = ["playground/**"]
